Fix app layout whitespace

--- a/src/assets/styles/layouts/app.css
+++ b/src/assets/styles/layouts/app.css
@@ -1,17 +1,21 @@
 body.pc-app {
   position: relative;
-  /* Ensure content fills entire screen height */
+  /* Fill entire height */
   display: flex;
   flex-direction: column;
   min-height: 100vh;
 }
 
-/* Stretch main div and its children to fill entire screen height too */
-.pc-app > :last-child {
+.pc-app__content {
+  display: flex;
+  flex-direction: column;
+  /* Fill entire height */
   flex-grow: 1;
 }
-.pc-app > :last-child > * {
-  align-self: stretch;
+
+.pc-app__content > :last-child {
+  /* Fill entire height */
+  flex-grow: 1;
 }
 
 .pc-app main {
